# cmsc-435

./: .gitignore  CMakeLists.txt  README.txt  slTransform.H  slTransform.cpp  slVector.H  slVector.cpp
proj1/: .gitignore  CMakeLists.txt  Makefile  Polygon.cpp  Polygon.h  Renderer.cpp  Renderer.h  Vector3D.cpp  Vector3D.h  World.cpp  World.h  grade.txt  main.cpp  readme.txt  tetra-3.nff
proj2/: .gitignore  Actor.h  CMakeLists.txt  Hit.cpp  Hit.h  Makefile  Material.h  Polygon.cpp  Polygon.h  README.txt  Ray.h  Renderer.cpp  Renderer.h  Vector3D.cpp  Vector3D.h  World.cpp  World.h  grade.txt  main.cpp  refract.nff  teapot-3.nff
proj3/: .gitignore  Actor.h  CMakeLists.txt  Color.h  Hit.cpp  Hit.h  Light.h  Makefile  Material.h  Pipeline.cpp  Pipeline.h  Polygon.cpp  Polygon.h  README.txt  Ray.h  Renderer.cpp  Renderer.h  Vector3D.cpp  Vector3D.h  Vertex.h  ViewDetails.cpp  ViewDetails.h  World.cpp  World.h  default.scene  grade.txt  main.cpp  readme.txt  walk.H  walk.cpp
proj3-old/: default.scene  grade.txt  makefile  readme.txt  slVector.cpp  walk.H  walk.cpp
proj4/: Triangle.h  Vector3D.h  grade.txt  io.cpp
proj4-old/: DCEL.cpp  DCEL.h  Triangle.h  Vector3D.cpp  Vector3D.h  grade.txt  main.cpp  readme.txt
proj5/: grade.txt  makefile  viewer.cpp
proj5-old/: kdTree.H  kdTree.cpp
proj6/: .gitignore  CImg.h  Makefile  README.txt  Seam.h  grade.txt  makefile  slVector.H  stub.cpp
proj6-other/: .gitignore  CMakeLists.txt  Makefile  grade.txt  slIO.H
